--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/Scripts/Adina's/PhysicsBody.cs
 Assets/Scripts/ZG.cs
+Assets/Scripts/ZG.cs
